package com.yyf.app.ch10;

public class Xiaoh extends AbstractTest{
    @Override
    public String answer1() {
        return "D";
    }

    @Override
    public String answer2() {
        return "C";
    }
}
