package com.yyf.app.ch10;

public class Xiaom extends AbstractTest{
    @Override
    public String answer1() {
        return "A";
    }

    @Override
    public String answer2() {
        return "D";
    }
}
